--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <meta name="author" content="Creative Tim">
   <title>Nascent Technologies</title>
   <!-- Favicon -->
-  <link href="./assets/img/brand/favicon0.png" rel="icon" type="image/png">
+  <link href="./assets/img/brand/favicon.ico" rel="icon" type="image/png">
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> -->
